// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationsReducer DismissNotification should dismiss notification (empty initial state) 1`] = `[]`;

exports[`notificationsReducer DismissNotification should dismiss notification (filled initial state) 1`] = `[]`;

exports[`notificationsReducer UpsertNotification should add notification 1`] = `
[
  {
    "buttons": [],
    "id": "1",
    "status": "none",
  },
]
`;

exports[`notificationsReducer UpsertNotification should update notification 1`] = `
[
  {
    "buttons": [],
    "dismissible": true,
    "id": "1",
    "status": "none",
  },
  {
    "buttons": [],
    "dismissible": false,
    "id": "2",
    "position": "top-left",
    "status": "error",
  },
]
`;
